--- a/inside.html
+++ b/inside.html
@@ -36,7 +36,7 @@
          <nav>
         <div class="nav">
             <ul id="naver">
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Inside</a></li>
                 <li><a href="#">Main Menu &raquo; </a>
                     <ul>
